# bezier_bringup

./: README.md
install/: local_setup.sh  setup.sh
install/bezier_bringup/share/bezier_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/path_planner3/lib/path_planner3/: path_generator
install/path_planner3/share/path_planner3/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/bezier_bringup/: setup.cfg  setup.py
src/bezier_bringup/config/: tb3_map.pgm  tb3_map.yaml
src/bezier_bringup/launch/: bringup.launch.py
